update(deathscreen) nvm another rework

--- a/resources/[strin]/strin_deathscreen/client/web/style.css
+++ b/resources/[strin]/strin_deathscreen/client/web/style.css
@@ -41,8 +41,10 @@ body {
     margin-top: 8px;
     font-size: 24px;
     font-weight: 600;
+    line-height: 32px;
     text-transform: uppercase;
     color: white;
+    text-align: center;
 }
 
 .deathscreen-colored-text {
