--- a/resources/[strin]/strin_hud/client/nui/style.css
+++ b/resources/[strin]/strin_hud/client/nui/style.css
@@ -42,6 +42,10 @@ body {
     box-shadow: 0px 1px 16px 5px rgba(0,0,0,0.84);*/
 }
 
+#speed {
+    font-size: 24px;
+}
+
 .vehicle-attr:first-of-type {
     margin-left: 16px;
 }
